force-app/main/default/objects/Activity/fields/Accept_Reject__c.field-meta.xml
<CustomField>
    <fullName>Accept_Reject__c</fullName>
    <label>Accept/Reject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>