force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Psychological</fullName>
            </value>
            <value>
                <fullName>Confidential Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>