force-app/main/default/objects/Activity/fields/Ebsta_Sync_Source__c.field-meta.xml
<CustomField>
    <fullName>Ebsta_Sync_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is marked by Ebsta when an email is synced.</description>
    <label>Ebsta Sync Source</label>
    <type>Checkbox</type>
</CustomField>