force-app/main/default/objects/Activity/fields/knowlarity_cti__Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>