force-app/main/default/objects/Activity/fields/knowlarity_cti__Knowlarity_Number__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Knowlarity_Number__c</fullName>
    <description>Knowlarity Business  Number</description>
    <inlineHelpText>This is your SuperReceptionist number</inlineHelpText>
    <label>Knowlarity Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>