force-app/main/default/objects/Activity/fields/knowlarity_cti__Second_Agent__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Second_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>