force-app/main/default/objects/Activity/fields/knowlarity_cti__Second_Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Second_Agent_Comments__c</fullName>
    <label>Second Agent Comments</label>
    <type>TextArea</type>
</CustomField>