force-app/main/default/objects/Activity/fields/knowlarity_cti__Second_Agent_Disposition__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Second_Agent_Disposition__c</fullName>
    <label>Second Agent Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Follow-up Requested</fullName>
            </value>
            <value>
                <fullName>Setup Appointments</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Junk Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>