force-app/main/default/objects/Activity/fields/knowlarity_cti__Second_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__Second_Agent_Number__c</fullName>
    <label>Second Agent Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>