force-app/main/default/objects/Activity/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Performance is very Encouraging</fullName>
            </value>
            <value>
                <fullName>Capable of higher academic achievements</fullName>
            </value>
            <value>
                <fullName>Considerable improvement in attendance</fullName>
            </value>
            <value>
                <fullName>Improvement in attendance very encouraging</fullName>
            </value>
            <value>
                <fullName>Is a committed student</fullName>
            </value>
            <value>
                <fullName>Is hardworking and actively participates in all activities</fullName>
            </value>
            <value>
                <fullName>Overall improvement is seen in performance</fullName>
            </value>
            <value>
                <fullName>Shows potential to take up higher academic challenges</fullName>
            </value>
            <value>
                <fullName>A little more hard work needed</fullName>
            </value>
            <value>
                <fullName>Attendance is a concern and student needs to attend classes regularly(for border cases)</fullName>
            </value>
            <value>
                <fullName>Attendance is a concern and student needs to improve attendance(for border cases)</fullName>
            </value>
            <value>
                <fullName>Attendance is a serious concern</fullName>
            </value>
            <value>
                <fullName>Attendance is a serious concern and student has been cautioned(for chronic cases)</fullName>
            </value>
            <value>
                <fullName>Can do much better</fullName>
            </value>
            <value>
                <fullName>Company of friends needs to be taken care of</fullName>
            </value>
            <value>
                <fullName>Is very distracted in class and needs to stay focused</fullName>
            </value>
            <value>
                <fullName>Lacks attention in class - must be work on study skills</fullName>
            </value>
            <value>
                <fullName>Late coming to class is a concern</fullName>
            </value>
            <value>
                <fullName>Must attend all Internal Assessments</fullName>
            </value>
            <value>
                <fullName>Must attend all placement drives</fullName>
            </value>
            <value>
                <fullName>Must attend remedial classes</fullName>
            </value>
            <value>
                <fullName>Must complete and submit projects in time</fullName>
            </value>
            <value>
                <fullName>Must submit assignments in time</fullName>
            </value>
            <value>
                <fullName>Needs to concentrate in class</fullName>
            </value>
            <value>
                <fullName>Needs to follow required dress code</fullName>
            </value>
            <value>
                <fullName>Needs to participate in Clubs / Forums / Sports activities</fullName>
            </value>
            <value>
                <fullName>Needs to put in extra work</fullName>
            </value>
            <value>
                <fullName>Overall academic performance in all subjects is a concern</fullName>
            </value>
            <value>
                <fullName>Parents need to attend PTM</fullName>
            </value>
            <value>
                <fullName>Parents need to be involved and follow up with student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>