force-app/main/default/objects/Activity/fields/sfal__IsAdvisingEvent__c.field-meta.xml
<CustomField>
    <fullName>sfal__IsAdvisingEvent__c</fullName>
    <description>Indicates that the Event is a support appointment that has an associated Appointment record.</description>
    <formula>IF(
    ISBLANK($Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c),
    false,
    IF(
        CONTAINS(
            $Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c,
            &quot;.&quot;
        ),
        $Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c == RecordType.NamespacePrefix &amp; &quot;.&quot; &amp; RecordType.DeveloperName,
        ISBLANK(RecordType.NamespacePrefix) &amp;&amp; $Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c == RecordType.DeveloperName
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Support Event</label>
    <type>Checkbox</type>
</CustomField>